--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
